Improved reading from resource folder